# sakura

./: .gitignore  Dockerfile  LICENSE  README.md  demo.py  docker.sh  init.sh  main.py  packages.json  pyproject.toml  requirements.json  setup.py  setup.sh  tester.py  trainer.py  utils.py
asyncdnn/: __init__.py
asyncdnn/decorators/: __init__.py
asyncdnn/nn/modules/: __init__.py  async_saver.py
asyncdnn/nn/trainers/: __init__.py  async_trainer.py  default_trainer.py  trainer.py
asyncdnn/test/: __main__.py
img/: cifar.jpg.pp3
pytorch-cifar/: main.py
sakura.egg-info/: PKG-INFO  SOURCES.txt
sakura/ml/decorators/: __init__.py
tmp/: README.md  demo.py  docker.sh  setup.py
tmp/sakura/ml/: default_trainer.py
tmp/sakura/ml/decorators/: __init__.py
