[tool.poetry]
name = "sakura"
version = "0.1.0"
description = "Sakura provides asynchronous training for DNN."
authors = ["ZakuroAI <info@zakuro.ai>"]
license = "ZakuroAI"

[tool.poetry.dependencies]
python = ">=3.7"
torch = "^1.8.1"
torchvision = "^0.9.1"
numpy = "^1.20.2"
tqdm = "^4.59.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
